...

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.project4.WelcomeFragment"
        android:label="WelcomeFragment" />
    <action
        android:id="@+id/welcomeFragment_to_reminderListFragment"
        app:destination="@+id/reminderListFragment"
        app:launchSingleTop="true"
        app:popUpTo="@id/nav_graph"
        app:popUpToInclusive="true"/>
    <fragment
        android:id="@+id/reminderListFragment"
...
